# mimosa

./: .cmake-format.py  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/docker/: ci-base-ros2.Dockerfile  ci-base.Dockerfile
.github/workflows/: ci.yml  docker.yml
cmake/: DetectROSVersion.cmake
mimosa/: CMakeLists.txt  package.xml
mimosa/config/: os_dummy.json
mimosa/config/enwide/: os_enwide.json  params.yaml
mimosa/config/euroc/: params.yaml
mimosa/config/hornbill/: os_hornbill.json  params.yaml
mimosa/config/lapwing/: params.yaml
mimosa/config/magpie/: params.yaml
mimosa/config/newer_college/: os_newer_college.json  params.yaml
mimosa/config/parrot/: params.yaml
mimosa/include/mimosa/: custom_yaml_types.hpp  ros_interface.hpp  sensor_manager_base.hpp  state.hpp  stopwatch.hpp  utils.hpp
mimosa/include/mimosa/graph/: manager.hpp
mimosa/include/mimosa/imu/: manager.hpp
mimosa/include/mimosa/lidar/: geometric.hpp  geometric_config.hpp  geometric_factor.hpp  incremental_voxel_map.hpp  manager.hpp  photometric.hpp  photometric_config.hpp  photometric_factor.hpp  photometric_utils.hpp  point.hpp  utils.hpp
mimosa/include/mimosa/odometry/: manager.hpp  utils.hpp
mimosa/include/mimosa/radar/: factor.hpp  manager.hpp  point.hpp  utils.hpp
mimosa/launch/: enwide.launch  enwide_rosbag.launch  euroc.launch  euroc_rosbag.launch  hornbill.launch  hornbill_rosbag.launch  lapwing.launch  magpie.launch  magpie_rosbag.launch  newer_college.launch  newer_college_rosbag.launch  parrot.launch  parrot_launch.py  parrot_rosbag.launch  parrot_rosbag_launch.py
mimosa/plotjuggler/: mimosa.xml  mimosa_new.xml
mimosa/rviz/: mimosa.rviz
mimosa/scripts/: accumulate_pcd.py  batch_process.sh  check_frames.py  convert_ros2bag_jazzy_to_humble.py  dataset_evaluation.py  evaluate.sh  evaluation.py  imu_calibration.py  leica_imu_gt_to_tum.py  topic_to_file.py  tum_path_publisher.py
mimosa/scripts/param_change_evaluation/: run_evaluation.sh
mimosa/scripts/param_change_evaluation/config_overrides/: li.yaml  lri_4dof.yaml  lri_4dof_avar_imu_params.yaml  lri_avar_imu_params.yaml  ri.yaml  ri_avar_imu_params.yaml
mimosa/src/: mimosa_node.cpp  mimosa_rosbag.cpp
mimosa/src/graph/: manager.cpp
mimosa/src/imu/: manager.cpp
mimosa/src/lidar/: geometric.cpp  geometric_config.cpp  incremental_voxel_map.cpp  manager.cpp  photometric.cpp  photometric_config.cpp  photometric_utils.cpp
mimosa/src/odometry/: manager.cpp
mimosa/src/radar/: manager.cpp
mimosa_msgs/: CMakeLists.txt  package.xml
mimosa_msgs/msg/: GraphManagerDebug.msg  ImuManagerDebug.msg  LidarGeometricDebug.msg  LidarManagerDebug.msg  LidarPhotometricDebug.msg  RadarManagerDebug.msg
