<?xml version="1.0"?>
<package format="2">
  <name>mimosa</name>
  <version>1.0.0</version>
  <description>mimosa</description>

  <maintainer email="nikhil.v.khedekar@ntnu.no">Nikhil Khedekar</maintainer>
  <maintainer email="konstantinos.alexis@ntnu.no">Kostas Alexis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <depend>config_utilities</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>gtsam_points</depend>
  <depend>gtsam</depend>
  <depend>mimosa_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>spdlog</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
