<?xml version="1.0"?>
<package format="3">
  <name>mimosa</name>
  <version>1.0.0</version>
  <description>mimosa</description>

  <maintainer email="nikhil.v.khedekar@ntnu.no">Nikhil Khedekar</maintainer>
  <maintainer email="konstantinos.alexis@ntnu.no">Kostas Alexis</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>config_utilities</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>gtsam_points</depend>
  <depend>gtsam</depend>
  <depend>mimosa_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>spdlog</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rosbag2_cpp</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
