<?xml version="1.0"?>
<package format="3">
  <name>mimosa_msgs</name>
  <version>1.0.0</version>
  <description>mimosa_msgs</description>

  <maintainer email="nikhil.v.khedekar@ntnu.no">Nikhil Khedekar</maintainer>
  <maintainer email="konstantinos.alexis@ntnu.no">Kostas Alexis</maintainer>
  <license>BSD</license>

  <!-- ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">message_runtime</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <!-- ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <!-- Common dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- ROS2 specific export -->
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
</package>
